--- a/techpack/audio/asoc/codecs/Makefile
+++ b/techpack/audio/asoc/codecs/Makefile
@@ -14,11 +14,8 @@ snd-soc-wcd-spi-objs := wcd-spi.o
 snd-soc-wcd9335-objs := wcd9335.o
 snd-soc-wcd-cpe-objs := wcd_cpe_services.o wcd_cpe_core.o
 
-#snd-soc-es9218p-objs := es9218p.o
-#obj-$(CONFIG_SND_SOC_ES9218P)  += snd-soc-es9218p.o
-ifneq (,$(filter $(CONFIG_SND_SOC_ES9218P),y m))
-	snd-soc-wcd-mbhc-objs += es9218p.o
-endif
+snd-soc-es9218p-objs := es9218p.o
+obj-$(CONFIG_SND_SOC_ES9218P)  += snd-soc-es9218p.o
 
 obj-$(CONFIG_SND_SOC_WCD9335) += snd-soc-wcd9335.o
 obj-$(CONFIG_SND_SOC_WCD_CPE)   += snd-soc-wcd-cpe.o
@@ -46,7 +43,3 @@ wcd-core-objs	+= wcd934x/wcd934x-tables.o
 
 obj-$(CONFIG_WCD9XXX_CODEC_CORE) += wcd-core.o
 obj-$(CONFIG_SND_SOC_MSM_HDMI_CODEC_RX) += msm_hdmi_codec_rx.o
-
-ifneq (,$(filter $(CONFIG_SND_SOC_SMA6101),y m))
-	obj-$(CONFIG_SND_SOC_SMA6101)   += sma6101/sma6101.o
-endif
